--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <p style="font-size: 1.2rem; color: #f5f5f5; line-height: 1.6;">
             Curious about what's next? The court is expanding, and I’m building a new digital realm where creativity, exploration, and mystery come alive. Starting with one of the many mythologies that I hold dear and supported my ideals to create art, Fallen Angels of the Grigori. (Work in Progress)
         </p>
-        <a href="file:///C:/Users/kingj/Desktop/1st%20Webpage/Fallen%20Angels%20Wiki.html" target="_blank" rel="noopener noreferrer" 
+        <a href="Fallen Angels Wiki.html" target="_blank" rel="noopener noreferrer" 
    style="display: inline-block; padding: 15px 30px; margin-top: 15px; font-size: 1.2rem; font-family: 'Cinzel', serif; font-weight: bold; color: #1c1c1c; background: gold; text-decoration: none; border: 2px solid #1c1c1c; border-radius: 10px; transition: background 0.3s ease-in-out, color 0.3s ease-in-out;">
     Visit the Portal to Fallen Angels
 </a>
